# py.template

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml  server.py
.github/workflows/: reviewdog.yaml  ruff.yaml
src/config/: app.py
src/utils/: logger.py
